# smile-face

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: dependencies.py  main.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/db/: base.py  models.py  session.py
app/ml/: artifact.py  features.py  infer.py  pipeline.py  registry.py  train.py
app/repositories/: prediction_repository.py  training_run_repository.py
app/routers/: classify.py  history.py  home.py  train.py
app/services/: dataset_service.py  image_service.py  training_service.py
app/static/css/: style.css
app/templates/: _face.html  base.html  classify.html  error.html  history.html  home.html  result.html  train.html
scripts/: bootstrap_dataset.py  predict.py  train.py
